# Caravault

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
demos/: demo.md  demo_caravault.sh
include/: bloom_filter.hpp  cdc_chunker.hpp  config.hpp  conflict_resolver.hpp  executor.hpp  logger.hpp  manifest_store.hpp  merkle_engine.hpp  platform.hpp  progress_reporter.hpp  sync_planner.hpp  version_vector.hpp
src/: bloom_filter.cpp  cdc_chunker.cpp  config.cpp  conflict_resolver.cpp  executor.cpp  logger.cpp  main.cpp  manifest_store.cpp  merkle_engine.cpp  platform.cpp  progress_reporter.cpp  sync_planner.cpp  version_vector.cpp
tests/integration/: integration_test.cpp  placeholder_test.cpp
tests/property/: cli_property_test.cpp  config_property_test.cpp  conflict_resolver_property_test.cpp  cross_platform_property_test.cpp  data_integrity_property_test.cpp  error_handling_property_test.cpp  executor_property_test.cpp  idempotence_property_test.cpp  incremental_sync_property_test.cpp  logger_property_test.cpp  manifest_store_property_test.cpp  merkle_engine_property_test.cpp  placeholder_test.cpp  progress_reporter_property_test.cpp  sync_planner_property_test.cpp  version_vector_property_test.cpp
tests/unit/: bloom_filter_test.cpp  cdc_chunker_test.cpp  manifest_store_test.cpp  merkle_engine_skip_test.cpp  placeholder_test.cpp  tombstone_scan_test.cpp  version_vector_test.cpp
